Fixed issues with samples